--- a/parents/templates/parents.html
+++ b/parents/templates/parents.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
  
 {% block title %}
     Home
@@ -13,9 +14,15 @@
     {% for parent in parents %}
     <article id="profile{{ forloop.counter }}" class="card">
       <figure>
-        <img src="{{ parent.photo.url }}" alt="{{ parent.name }}" width="600" height="600">
-        <figcaption>{{ parent.name }}</figcaption>
-      </figure>
+          <a href="{% url 'parent_update' parent.id %}" title="Clique na imagem para atualizar ou deletar">
+          {% if parent.photo %}
+              <img src="{{ parent.photo.url }}" alt="{{ parent.name }}" width="600" height="600">
+          {% else %}
+              <img src="{% static 'images/no-photo.png' %}" alt="Sem foto" width="600" height="600">
+          {% endif %}
+          </a>
+          <figcaption>{{ parent.name }} {{parent.last_name}}</figcaption>
+        </figure>
       <p>{{ parent.birthday|date:"d/m/Y" }}</p>
     </article>
     {% endfor %}
