--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,6 +106,17 @@ footer {
   text-align: center;
 }
 
+.card a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card a:hover {
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+
 
 
 /* Área principal */
@@ -183,6 +194,43 @@ main.form-page {
   background-color: #1e40af;
 }
 
+
+.a-delete {
+  background-color: #f96262;
+  text-decoration: none;
+  color: white;
+  padding: 0.8rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 600;
+  transition: background-color 0.2s;
+}
+
+.a-delete:hover {
+  background-color: #ff0000d4;
+
+}
+
+
+.a-back {
+  background-color: gray;
+  text-decoration: none;
+  color: white;
+  padding: 0.8rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 600;
+  transition: background-color 0.2s;
+}
+
+.a-back:hover {
+  background-color: #b8b5b5d4;
+
+}
 
 
 * Centraliza o conteúdo */
