--- a/parents/templates/parent_update.html
+++ b/parents/templates/parent_update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Formulário de Cadastro
+  Formulário de Actualização e Apagar
 {% endblock %}
 
 {% block content %}
